force-app/main/default/objects/Conditions_of_Grant__c/Conditions_of_Grant__c.object-meta.xml
<CustomObject>
    <description>Multiple Conditions of a Concession logged for an Opportunity - US-1606</description>
    <label>Conditions of Grant</label>
    <nameField>
        <displayFormat>{000}</displayFormat>
        <label>Conditions of Grant #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Conditions of Grant</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>