force-app/main/default/objects/Conditions_of_Grant__c/fields/Concession__c.field-meta.xml
<CustomField>
    <fullName>Concession__c</fullName>
    <label>Concession</label>
    <referenceTo>Concession__c</referenceTo>
    <relationshipLabel>Conditions of Grant</relationshipLabel>
    <relationshipName>Conditions_of_Grant</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>