force-app/main/default/objects/Conditions_of_Grant__c/fields/Condition_Measure__c.field-meta.xml
<CustomField>
    <fullName>Condition_Measure__c</fullName>
    <label>Condition Measure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Full Transactional Banking</fullName>
            </value>
            <value>
                <fullName>Minimum Average Credit Balance</fullName>
            </value>
            <value>
                <fullName>Minimum Turnover</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>