force-app/main/default/objects/Conditions_of_Grant__c/fields/Condition_Product__c.field-meta.xml
<CustomField>
    <fullName>Condition_Product__c</fullName>
    <label>Condition Product</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Condition_Measure__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ANA Cash Deposits (Automatic Notes Acceptor)</fullName>
            </value>
            <value>
                <fullName>Autosafe Cash Deposits</fullName>
            </value>
            <value>
                <fullName>Branch Cash Deposits</fullName>
            </value>
            <value>
                <fullName>Business Online Collections</fullName>
            </value>
            <value>
                <fullName>Business Online Payments</fullName>
            </value>
            <value>
                <fullName>Call Account</fullName>
            </value>
            <value>
                <fullName>Cash, BOL, Merchant Acquiring</fullName>
            </value>
            <value>
                <fullName>Cash and BOL</fullName>
            </value>
            <value>
                <fullName>Cash and Merchant Acquiring</fullName>
            </value>
            <value>
                <fullName>Current Account</fullName>
            </value>
            <value>
                <fullName>Forex</fullName>
            </value>
            <value>
                <fullName>Investment Account</fullName>
            </value>
            <value>
                <fullName>Liquidity Management</fullName>
            </value>
            <value>
                <fullName>Merchant Acquiring</fullName>
            </value>
            <value>
                <fullName>Merchant Acquiring and BOL</fullName>
            </value>
            <value>
                <fullName>Total Cash Deposits</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>