force-app/main/default/objects/Conditions_of_Grant__c/validationRules/Deadline_Date_In_The_Past.validationRule-meta.xml
<ValidationRule>
    <fullName>Deadline_Date_In_The_Past</fullName>
    <active>true</active>
    <description>DEF-002164 only allow deadine date to be a current or future date.</description>
    <errorConditionFormula>Deadline__c &lt; Today()</errorConditionFormula>
    <errorDisplayField>Deadline__c</errorDisplayField>
    <errorMessage>Date cannot be in the past. Please enter a future date.</errorMessage>
</ValidationRule>